[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pymcfost"
authors = [
    {name = "Christophe Pinte"},
]
description = "MCFOST post-processing in Python'"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy",
    "astropy",
    "scipy",
    "matplotlib",
    "progressbar",
    "cmasher",
]
dynamic = ["version"]

[project.urls]
homepage = "http://github.com/cpinte/pymcfost"

[tool.setuptools_scm]
